part1/1-12-project-v0.6/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dowk-22-todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
